# MyLangChainProject

./: .gitignore  pyproject.toml
src/mylangchain_app/00Basic/: 000Groq_연동_basic.ipynb  001_LLMChain생성.ipynb  002_PromptTemplate종류.ipynb  003-1_PydanticParser.ipynb  003-2_StructuredParser.ipynb  003-3_DatetimeParser.ipynb  003-4_EnumParser.ipynb  003_OutPutParser종류.ipynb  004_Model_Parameter.ipynb  005_ChatUpstage 활용.ipynb  006_Gemini활용.ipynb  011_LangSmith_Basic.ipynb
src/mylangchain_app/00LangChainBasic/: 001_LLMChain생성.ipynb  002_PromptTemplate종류.ipynb  003-1_PydanticParser.ipynb  003_OutPutParser종류.ipynb  011_LangSmith_Basic.ipynb
src/mylangchain_app/01RAG/: 010_RAG_Pipeline_0Basic.ipynb  010_RAG_Pipeline_1DocumentLoader_pdf.ipynb  010_RAG_Pipeline_1DocumentLoader_pdf_Upstage.ipynb  010_RAG_Pipeline_2.1TextSplitter.ipynb  010_RAG_Pipeline_3Embedding.ipynb  010_RAG_Pipeline_4Chroma_FAISS.ipynb  010_RAG_Pipeline_5Retriever.ipynb  011_RAG_DocxLoader_Faiss_Upstage.ipynb  011_RAG_WebBaseLoader_Upstage.ipynb
src/mylangchain_app/02Ollama/: 013_Ollama_ llama3_활용.ipynb  013_Ollama_DeepSeek-r1_Basic.ipynb  013_Ollama_DeepSeek-r1_Qwen3연동.ipynb
src/mylangchain_app/03ChatBot/: 00chatbot_gradioBasic.ipynb  01chatbot_gradio_chatbot.ipynb  02chatbot_gradio_chatopenai.ipynb  03chatbot_gradio_rag.ipynb
src/mylangchain_app/04LangChainTool/: 20-0LangChain_도구(tool)활용Basic.ipynb  20-1LangChain_ToolCalling.ipynb  21-1Agent_analysis_titanic.ipynb
src/mylangchain_app/05LangGraph/: 00_LangChain _LangGraph_비교.ipynb  01_LangGraph_도구(tool)활용Basic.ipynb  02_LangGraph_StateGraph.ipynb  (+5 more)
(+28 files in other folders)
