[project]
name = "mylangchain-app"
version = "0.1.0"
description = ""
authors = [
    {name = "NamEon",email = "143885031+skadjs@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "<3.15,>=3.10"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "gradio (>=5.46.0,<6.0.0)",
    "langchain-ollama (>=0.3.8,<0.4.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "pyppeteer (>=2.0.0,<3.0.0)",
    "langserve (>=0.3.2,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "sse-starlette (>=3.0.2,<4.0.0)",
    "pypdf (>=4.2.0,<5.0.0)",
    "langchain-upstage (>=0.7.3,<0.8.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "chromadb (>=1.1.0,<2.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "gradio-pdf (>=0.0.22,<0.0.23)"
]

[tool.poetry]
packages = [{include = "mylangchain_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
